# Backup-Monitoring-Analytics-System

./: .gitignore  PHASE1_EXECUTION.md  README.md  backup_monitoring_system_אפיון_פורמלי copy.txt  backup_monitoring_system_אפיון_פורמלי.md  changelog.md  decisions.md  pyproject.toml  requirements.txt  run_phase1.bat  run_phase1.py  setup.py  status.md  validate_e2e.py  validate_setup.py
config/: classification_rules.yaml  config.yaml  json_schema.json
data/: README.md
examples/: sample_backup_data.json
src/backup_monitoring/: __init__.py
src/backup_monitoring/anomaly_detection/: __init__.py  detector.py  models.py
src/backup_monitoring/classifier/: __init__.py  classifier.py  rules.py
src/backup_monitoring/config/: config_loader.py
src/backup_monitoring/data_loader/: __init__.py  json_loader.py  models.py
src/backup_monitoring/integration/: __init__.py  adapters.py  data_provider.py  mocks.py
src/backup_monitoring/processing/: __init__.py  comparison.py  models.py  processor.py
src/backup_monitoring/reporting/: __init__.py  generator.py
src/tests/: conftest.py  test_anomaly_detection.py  test_classifier.py  test_comparison.py  test_config_loader.py  test_e2e.py  test_integration.py  test_json_loader.py  test_processing.py  test_reporting.py
ui/: README.md  dashboard.html  dashboard_api.py  validate_dashboard.py
